# server/app.js
@@ -31,7 +31,7 @@ app.use(cors());
 app.use('/api-docs',require("./routes/documentation.route"));
 app.use('/api/products', require('./routes/product.routes'));
 app.use('/api/user', require('./routes/users.routes'));
-app.use('/api/card', require('./routes/card.routes'));
+app.use('/api/cart', require('./routes/card.routes'));
 app.use('/api/checkout', require('./routes/checkout.routes'));
 // app.use('/api/clients', require('./routes/clients.routes'));
 // app.use('/api/suppliers', require('./routes/suppliers.routes'));
