# server/utils/swagger.json
@@ -15,16 +15,17 @@
     "produces": [
         "application/json"
     ],
-    "tags": [{
-        "name": "bitTrade",
-        "description": "API for bitTrade in the system"
-    }],
+    "tags": [
+        {
+            "name": "bitTrade",
+            "description": "API for bitTrade in the system"
+        }
+    ],
     "host": "localhost:3000",
     "basePath": "/api",
     "paths": {
         "/products": {
             "post": {
-
                 "tags": [
                     "Products"
                 ],
@@ -37,13 +38,13 @@
                 "produces": [
                     "application/json"
                 ],
-                "parameters": [{
+                "parameters": [
+                    {
                         "name": "title",
                         "in": "body",
                         "description": "Title of the product",
                         "required": true,
                         "type": "string"
-
                     },
                     {
                         "name": "description",
@@ -51,7 +52,6 @@
                         "description": "Description of the product",
                         "required": true,
                         "type": "string"
-
                     },
                     {
                         "name": "price",
@@ -69,7 +69,6 @@
                         "type": "integer",
                         "format": "int64"
                     },
-
                     {
                         "name": "productimages",
                         "in": "formData",
@@ -86,17 +85,17 @@
                         }
                     }
                 }
-
-
             },
             "get": {
-                "parameters": [{
-                    "name": "page",
-                    "in": "query",
-                    "required": false,
-                    "description": "Products Pagination",
-                    "type": "number"
-                }],
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "description": "Products Pagination",
+                        "type": "number"
+                    }
+                ],
                 "tags": [
                     "Products"
                 ],
@@ -112,17 +111,18 @@
                     }
                 }
             }
-            
         },
         "/user": {
             "get": {
-                "parameters": [{
-                    "name": "id",
-                    "in": "path",
-                    "required": true,
-                    "description": "ID of the user that we want to match",
-                    "type": "string"
-                }],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "ID of the user that we want to match",
+                        "type": "string"
+                    }
+                ],
                 "tags": [
                     "User"
                 ],
@@ -137,15 +137,17 @@
                 }
             },
             "post": {
-                "parameters": [{
-                    "in": "body",
-                    "name": "User",
-                    "description": "Create a user",
-                    "require": "true",
-                    "schema": {
-                        "$ref": "#/definitions/CreateUser"
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "User",
+                        "description": "Create a user",
+                        "require": "true",
+                        "schema": {
+                            "$ref": "#/definitions/CreateUser"
+                        }
                     }
-                }],
+                ],
                 "tags": [
                     "User"
                 ],
@@ -176,15 +178,17 @@
         },
         "/user/login": {
             "post": {
-                "parameters": [{
-                    "in": "body",
-                    "name": "User",
-                    "description": "User Login",
-                    "require": "true",
-                    "schema": {
-                        "$ref": "#/definitions/UserLogin"
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "User",
+                        "description": "User Login",
+                        "require": "true",
+                        "schema": {
+                            "$ref": "#/definitions/UserLogin"
+                        }
                     }
-                }],
+                ],
                 "tags": [
                     "User"
                 ],
@@ -212,6 +216,87 @@
                     }
                 }
             }
+        },
+        "/card": {
+            "post": {
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "Addtocard",
+                        "description": "Add Card",
+                        "require": "true",
+                        "schema": {
+                            "$ref": "#/definitions/AddToCardParams"
+                        }
+                    }
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Add new product to a card",
+                "requestBody": {
+                    "description": "You have to send some IDs to add a product to card",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/AddToCardParams"
+                            }
+                        }
+                    }
+                },
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/AddToCardParams"
+                        }
+                    }
+                }
+            }
+        },
+        "/card/getproducts/{id}": {
+            "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Get all the products in card",
+                "description": "Get all the products in card",
+                "operationId": "getcardproducts",
+                "produces": [
+                    "application/xml",
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of user to return",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "success": "true",
+                        "message": "There is the list of your Products in cart",
+                        "schema": {
+                            "$ref": "#/definitions/Products"
+                        }
+                    },
+                    "400": {
+                        "success": "false",
+                        "message": "Sorry Something Happened We'll get back to you as soon as possible"
+                    },
+                    "404": {
+                        "success": "false",
+                        "message": "Sorry your card is empty"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -219,6 +304,17 @@
             "properties": {
                 "uuid": {
                     "type": "string"
+                }
+            }
+        },
+        "AddToCardParams": {
+            "type": "object",
+            "properties": {
+                "userId": {
+                    "$ref": "#/definitions/id"
+                },
+                "productid": {
+                    "$ref": "#/definitions/id"
                 }
             }
         },
